# EVE-MultiTools

./: .gitignore  .gitmodules  .lintstagedrc  .tokeignore  BUNDLE_STATE_MANAGEMENT.md  CHANNEL_MIGRATION.md  LICENSE-APACHE  README.md  biome.jsonc  code-graph.py  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml  tailwind.config.js
.github/prompts/: focus.prompt.md
.husky/: pre-commit
data/: .gitignore  README.md  bundle.py  bundle_impl.py  esi-keys.list.json  links.list.json  mock.py  schema.proto  schema_pb2.py
data/bundle_generate/: __init__.py  async_config.py  consts.py  log.py  paths.py  resources.py  schema_resource.py  types.py
data/external-sql/: market.sql
docs/: README.md  create-new-page.md  unified-data-store.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bundle.rs  config.rs  data.rs  init.rs  lib.rs
src-tauri/src/data/: bundle.rs  esi.rs  links.rs  localization.rs  market.rs  mod.rs  statics.rs  universe.rs
src-tauri/src/data/image/: faction.rs  graphic.rs  icon.rs  mod.rs  skin.rs
src-tauri/src/data/localization/: npc_corporation_lookup.rs  type_lookup.rs  universe_lookup.rs
src-tauri/src/data/market/: mod.rs
src-tauri/src/data/proto/: schema.rs
src-tauri/src/data/statics/: categories.rs  factions.rs  groups.rs  market_group.rs  meta_groups.rs  mod.rs  npc_corporations.rs  skins.rs  station_operations.rs  types.rs
src-tauri/src/data/universe/: constellations.rs  regions.rs  system_content.rs  systems.rs
src-tauri/src/data/universe/system_content/: moons.rs  npc_stations.rs  planets.rs  systems.rs
src-tauri/src/utils/: database.rs  map.rs  mod.rs  path.rs  request.rs  serde.rs
src/app/: error.tsx  layout.tsx  page.tsx  providers.tsx
src/components/: AppInitializer.tsx  AppRouter.tsx  ConfigPanel.tsx  Described.tsx  ExternalLink.tsx  Links.tsx  NavigationControls.tsx  SPALayout.tsx  SPARouter.tsx  ShortcutCard.tsx  TypeCard.tsx  TypeImage.tsx  UniverseLocation.tsx  breadcrumb.tsx  icons.tsx  primitives.ts  tree-view.tsx
src/config/: routes.ts  site.ts
src/constant/: color.ts  eve.ts  localization.ts  unit.ts
src/contexts/: BundleContext.tsx  GlobalLoadingContext.tsx  SPARouterContext.tsx  SettingsContext.tsx  TypeExploreContext.tsx
src/data/: schema.ts  universe.ts
src/hooks/: useAppSettings.ts  useAsyncMemo.ts  useBundle.ts  useConfig.ts  useFactionExplore.ts  useGlobalConfig.ts  useGlobalLoading.ts  useLoading.ts  useLocalization.ts  useLocalizedMessage.ts  useMarketCache.ts  useMarketGroupTree.ts  useMarketList.ts  useSPARouter.ts  useSettings.ts  useStoreInitializer.ts  useTypeExplore.ts  useUniverseExplore.ts
utils/: README.md  get_fsd_layout.py
(+166 files in other folders)
