[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }
prost-build = "0.14.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["devtools"] }
tauri-plugin-log = "2"
prost = "0.14.1"
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
zip = "0.6.6"
tauri-plugin-dialog = "2"
serde_with = { version = "3.14.0", features = ["chrono"] }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
nohash-hasher = "0.2.0"
